--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=app
 spring.mvc.problemdetails.enabled=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db:5432/postgres
+spring.datasource.url=jdbc:postgresql://110.74.194.123:1234/postgres
 spring.datasource.username=postgres
 spring.datasource.password=123
